fix (home) intro safe overflow

--- a/src/scss/patterns/_intro.scss
+++ b/src/scss/patterns/_intro.scss
@@ -6,6 +6,7 @@
     position:relative;
     margin-bottom: 1em;
     border-bottom: 1px solid $maincolor;
+    overflow: hidden;
     
     &__svg{
         width: 100%;
